<resources>
    <string name="app_name">Food Amigo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="order_label">Order No:</string>
    <string name="btn_edit">Edit</string>
    <string name="lbl_total">Total</string>
    <string name="btn_place_order">Place order</string>
    <string name="title_activity_place_order">PlaceOrderActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="lbl_placed_on">Your order was placed</string>
    <string name="dialog_message">Are you sure you want to exit</string>
    <string name="dialog_title">Confirm exit</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="btn_next">Next</string>
    <string name="desc_product_image">Product image</string>
    <string name="link_image">link icon</string>
    <string name="retry">Retry</string>
    <string name="product_add">Add</string>
    <string name="app_city">Panjim, Goa</string>
    <string name="Rs"> \u20B9 </string>
    <string name="divider"> | </string>
    <string name="dialog_order_cancel_message">Are you sure you want to cancel the current order ?</string>
    <string name="dialog_order_cancel_title">Cancel order</string>
    <string name="btn_use_current_location">Use current location</string>
    <string name="or">Or</string>
    <string name="enter_new_add">Enter new address</string>
    <string name="btn_save">Save</string>
    <string name="checkout">Checkout</string>
    <string name="cart">Cart</string>
    <string name="add_new_item">Add new Item</string>
    <string name="pick_a_username">Pick a username</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="remove_item">-</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="mins">Minutes</string>
    <string name="skip">See menu</string>
    <string name="img_desc_tut">Tutorial image</string>
</resources>
