<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pick_a_username" />

        <EditText
            android:id="@+id/etMobileNumber"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_mobile_number"
            android:inputType="phone" />

        <Button
            android:id="@+id/btnUseCurrentLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_use_current_location" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/or" />

        <EditText
            android:id="@+id/etAddress"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_new_add" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_save" />

    </LinearLayout>
</layout>