<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="order"
            type="in.co.foodamigo.foodapp.module.order.view.model.OrderViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!--android:paddingTop="?android:attr/actionBarSize"-->

        <LinearLayout
            android:id="@+id/vg_cartToolBar"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageButton1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:contentDescription="@string/cart"
                android:src="@drawable/ic_shopping_cart_black_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"

                android:layout_weight="0"
                android:text="@{String.valueOf(order.quantity)}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_weight="0"
                android:text="@string/divider" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="20dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="5dp"
                android:layout_weight="0"
                android:text="@{@string/Rs + String.valueOf(order.total)}" />

            <Button
                android:id="@+id/btn_checkout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="3"
                android:background="@color/primary_color"
                android:text="@string/checkout"
                android:textColor="@color/grey_darkest"
                android:textStyle="bold"/>

        </LinearLayout>

        <ListView
            android:id="@+id/lv_cart_items"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>
</layout>